@@ -1,0 +1,4 @@
+#! /bin/bash
+
+rm /usr/share/applications/SDLPoP.desktop
+
